Update entities
