# routes/auth.js
@@ -13,14 +13,18 @@ router.post('/' , async (req , res) => {
     if(error) return res.status(400).send(error.details[0].message);
 
     let user = await User.findOne({email: req.body.email});
-    if(!user) return res.status(400).send('Invalid email or password.');
+    if(!user) return res.status(400).send('Invalid email or password..');
+
+    console.log(req.body.password);
+    console.log(user.password);
 
     let validPassword = await bcrypt.compare(req.body.password , user.password)
+    console.log(validPassword)
     if(!validPassword)
         return res.status(400).send('Invalid email or password.');
         
     const token = user.generateAuthToken();
-    res.send(token); 
+    res.header('x-auth-token' , token).send('logged in successfully'); 
 });
 
 
