# routes/likes.js
@@ -1,14 +1,11 @@
 const express = require('express');
-const mongoose = require('mongoose');
 const auth = require('../middleware/auth');
 const admin = require('../middleware/admin');
-const selfOrAdmin = require('../middleware/selfOrAdmin');
-// const Joi = require('joi');
 const router = express.Router();
-const {User} = require('../modules/user');
 const {Post} = require('../modules/post');
 const {Like} = require('../modules/like');
-const _ = require('lodash')
+const _ = require('lodash');
+const { User } = require('./users');
 
 
 
@@ -87,17 +84,17 @@ router.post('/' , auth , async (req, res) => {
     }
     */
     try{
-        const user = await User.findById(req.body.userId);
-        if(!user)
-            return res.status(404).send('The user with the given ID was not found.');
         const post = await Post.findById(req.body.postId);
         if(!post)
             return res.status(404).send("The post with the given ID was not found.");
-        
+        const writerId = await User.findById(req.body.writerId);
+        if(!writerId)
+            return res.status(404).send("The writer with the given ID was not found.");
         const like = await new Like({
-            userId : req.body.userId,
-            postId : req.body.postId
-        })
+            userId : req.user._id,
+            postId : post._id,
+            writerId : writerId
+        });
         await like.save();
         post.likes.push(like);
         await post.save();
@@ -131,18 +128,22 @@ router.delete('/:id' , auth , async (req, res) => {
         }
     */
     try{
-        const like = Like.findbyIdAndRemove(req.params.id);
+        const like = await Like.findById(req.params.id);
         if(!like)
-            return res.status(404).send('The like with the given ID was not found.');
+            return res.status(404).send('like with the given ID was not found.');
         const post = await Post.findById(like.postId);
+        // console.log(post);
+        if(req.user._id != post.writerId && !req.user.isAdmin)
+            return res.status(403).send('Access denied.');
         const index = post.likes.indexOf(like._id);
         if(index != -1)
             post.likes.splice(index , 1);
         await post.save();
-        res.send(like); 
+        await Like.deleteOne({_id : req.params.id});
+        res.send("Like Deleted successfully.\n\n" + like); 
     }
     catch(ex){
-        console.log(ex.message);
+        res.send(ex.message); 
     }
 });
 
