# swagger_output.json
@@ -2,8 +2,8 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    "title": "Social Media API Documentation",
+    "description": "Documentation for the Social Media API Coded by Alireza Arbabi, made by <b>Swagger Autogen</b>."
   },
   "host": "localhost:3000",
   "basePath": "/",
@@ -134,18 +134,6 @@
             "name": "x-auth-token",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "writerId": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -184,18 +172,6 @@
             "name": "x-auth-token",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "writerId": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -215,13 +191,6 @@
             "description": "internal server error"
           }
         }
-      }
-    },
-    "/DeleteAll": {
-      "delete": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
       }
     },
     "/api/posts": {
@@ -247,11 +216,6 @@
         "description": "Create new post",
         "parameters": [
           {
-            "name": "x-auth-token",
-            "in": "header",
-            "type": "string"
-          },
-          {
             "name": "writerId",
             "in": "body",
             "schema": {
@@ -261,9 +225,6 @@
                   "example": "any"
                 },
                 "text": {
-                  "example": "any"
-                },
-                "writerId": {
                   "example": "any"
                 }
               }
@@ -302,12 +263,6 @@
         "responses": {
           "200": {
             "description": "post created successfully"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "500": {
             "description": "internal server error"
@@ -362,16 +317,12 @@
           {
             "name": "writerId",
             "in": "body",
+            "description": "The id of the writer",
+            "required": true,
             "schema": {
               "type": "object",
-              "properties": {
-                "writerId": {
-                  "example": "any"
-                }
-              }
-            },
-            "description": "The id of the writer",
-            "required": true
+              "properties": {}
+            }
           },
           {
             "name": "title",
@@ -435,18 +386,6 @@
             "name": "x-auth-token",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "writerId": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
@@ -466,6 +405,13 @@
             "description": "internal server error"
           }
         }
+      }
+    },
+    "/DeleteAll": {
+      "delete": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
       }
     },
     "/api/likes": {
@@ -496,10 +442,10 @@
             "schema": {
               "type": "object",
               "properties": {
-                "userId": {
+                "postId": {
                   "example": "any"
                 },
-                "postId": {
+                "writerId": {
                   "example": "any"
                 }
               }
@@ -612,9 +558,6 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "400": {
             "description": "Bad Request"
           }
